Initial documentation for the Registration Page API complete

--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,5 @@
 * Documenting API calls
 ** DONE Create Team
-** TODO Create Package
+** DONE Create Package
+CLOSED: [2022-12-22 Thu 20:55]
 ** DONE Register Wristband
